--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
 <footer>
         
-        Site criado por <a href="https://gustavoguanabara.github.io/" target="_blank">Gustavo Guanabara</a> para o <a href="https://youtube.comCursoemVideo"target="_blank">CursoemVideo</a>.
+        Site criado por <a href="https://albertomonteirojunior.github.io" target="_blank">Alberto Junior.
 
 </footer>
 </body>
